--- a/src/styles/scss/common/variables.scss
+++ b/src/styles/scss/common/variables.scss
@@ -25,4 +25,5 @@ $colors: (
         "electric": #323264,
         "dark-gray": #46466E,
         "gray-bg": #F5F5FA,
+        "gray-l":#E6E6F0,
 );
