--- a/src/styles/scss/components/header/header-media.scss
+++ b/src/styles/scss/components/header/header-media.scss
@@ -1,5 +1,15 @@
 .header {
   @media (max-width: 992px) {
+
+    &__top {
+      top: -20px;
+      display: flex;
+      flex-direction: row;
+      align-items: flex-start;
+      margin-right: 230px;
+    }
+
+
     .navbar-divider {
       font-size: map-get($font-sizes, 'fs20');
     }
@@ -28,12 +38,17 @@
 .header {
   @media (max-width: 767px) {
     &__top {
-      top: -40px;
+      top: -20px;
+      display: flex;
+      flex-direction: row;
+      align-items: flex-start;
+      margin-right: 50px;
     }
 
-    .navbar-divider {
-      font-size: map-get($font-sizes, 'sm');
-      margin: 0;
+    .navbar-brand, .navbar-divider, .navbar-link, .header__top {
+      display: block;
+      text-align: left;
+      margin: 0 10px;
     }
 
     img {
@@ -41,19 +56,42 @@
       max-width: 70px;
     }
 
-    .navbar-link {
-      font-size: map-get($font-sizes, 'sm');
-      font-weight: 100;
-      margin: 0;
-
-
-    }
 
     .navbar-collapse {
       max-width: 100%;
 
     }
+
+    .header__top .dot-after::after {
+      content: '';
+    }
+    .header__lang-switcher, .header__address, .header__contact, .header__socials {
+      margin-bottom: 10px;
+    }
+
+    .navbar-nav {
+      width: 100%;
+      padding-left: 10px;
+      padding-right: 10px;
+    }
+
+    .navbar-nav .nav-item {
+      display: block;
+      width: 100%;
+      text-align: left;
+      margin-bottom: 10px;
+    }
+
+    .navbar-nav .nav-link {
+      padding-left: 0;
+      padding-right: 0;
+    }
+
+
   }
+
+
+
 
   @media (max-width: 575px) {
     padding-top: 60px;
@@ -89,9 +127,6 @@
       display: none !important;
     }
 
-    &__dot-after:after {
-      display: none;
-    }
 
     &__top {
       top: -60px;
@@ -100,6 +135,12 @@
       background: rgba(255, 255, 255, 0.44);
       justify-content: space-between !important;
     }
+
+    .dot-after::after {
+      content: '';
+      display: none;
+    }
+
   }
 
 }
