--- a/src/styles/scss/components/header/header.scss
+++ b/src/styles/scss/components/header/header.scss
@@ -14,7 +14,6 @@
     font-weight: 700;
   text-decoration: none;
   color: map-get($colors, 'gray');
-  display: inline-block;
   transition: 0.3s color;
 
   }
@@ -23,14 +22,13 @@
     color: map-get($colors, 'accent-color') ;
   }
 
-  .navbar-toggler {
-    color: map-get($colors, 'white');
+
+
+    .navbar-toggler {
+    color: map-get($colors, 'electric');
     border-color: map-get($colors, 'white');
   }
 
-  .header__top {
-    gap: 10px;
-  }
 
 .navbar-divider {
   font-size: map-get($font-sizes, 'xxl');
@@ -43,6 +41,7 @@
   .container {
     position: relative;
   }
+
   .navbar-brand {
     position: relative;
     z-index: 1;
@@ -51,36 +50,35 @@
   .navbar-nav {
     margin-top: 20px;
     display: flex;
-    gap: 10px;
-
-
-
-    .nav-item a {
-        font-size: map-get($font-sizes, 'sm');
-        color: map-get($colors, 'blue');
-        font-weight: 600;
-        width: 100%;
-      display: inline-block;
-      transition: 0.3s color;
-      }
-
-    .navbar-item a:hover{
-      color: map-get($colors, 'accent-color') ;
-    }
+    gap: 15px;
+    padding-top: 0;
 
     }
 
+.navbar-nav .nav-link{
+  font-size: map-get($font-sizes, 'sm');
+  color: map-get($colors, 'blue') ;
+  text-decoration: none;
+  margin-top: 10px;
+  margin-left: 15px;
+  transition: color 0.3s;
+  font-weight: 700;
+  position: relative;
+  white-space: nowrap;
+
+}
+
+.navbar-nav .nav-link:hover {
+  color: map-get($colors, 'accent-color') ;
+  text-decoration: underline;
+}
 
   .section-header {
     margin-bottom: 30px;
-
-   nav .a header link {
-white-space: nowrap;
-      text-transform: uppercase;
-      font-weight: 700;
+      font-weight: 400;
     }
 
-    }
+
 
 
   &__top {
@@ -89,6 +87,7 @@ white-space: nowrap;
     right: 15px;
     z-index: 0;
   }
+
 
   &__lang-switcher {
 
@@ -125,19 +124,15 @@ white-space: nowrap;
    font-size: map-get($font-sizes, 'md');
  }
 
-.header__address{
-    gap: 30px;
-  }
-
   &__contact a {
     font-weight: 700;
   }
 
-  &__dot-after:after {
+  .dot-after::after {
     content: '';
-    width: 6px;
-    height: 6px;
-    background: map-get($colors, 'white');
+    width: 7px;
+    height: 7px;
+    background: map-get($colors, 'gray-l');
     border-radius: 50%;
     display: inline-block;
     margin: 0 6px;
