--- a/src/styles/scss/components/header/header-media.scss
+++ b/src/styles/scss/components/header/header-media.scss
@@ -11,7 +11,7 @@
 
 
     .navbar-divider {
-      font-size: map-get($font-sizes, 'fs20');
+      font-size: map-get($font-sizes, 'md');
     }
 
     img {
@@ -25,125 +25,131 @@
       margin: 0;
 
     }
-    .navbar-collapse{
+    .navbar-collapse {
       margin-left: 20px;
     }
 
-   .navbar-nav{
-     padding-top: 30px;
-   }
-  }
-
-
-.header {
-  @media (max-width: 767px) {
-    &__top {
-      top: -20px;
-      display: flex;
-      flex-direction: row;
-      align-items: flex-start;
-      margin-right: 50px;
-    }
-
-    .navbar-brand, .navbar-divider, .navbar-link, .header__top {
-      display: block;
-      text-align: left;
-      margin: 0 10px;
-    }
-
-    img {
-      max-height: 70px;
-      max-width: 70px;
-    }
-
-
-    .navbar-collapse {
-      max-width: 100%;
-
-    }
-
-    .header__top .dot-after::after {
-      content: '';
-    }
-    .header__lang-switcher, .header__address, .header__contact, .header__socials {
-      margin-bottom: 10px;
-    }
-
     .navbar-nav {
-      width: 100%;
-      padding-left: 10px;
-      padding-right: 10px;
+      padding-top: 30px;
     }
-
-    .navbar-nav .nav-item {
-      display: block;
-      width: 100%;
-      text-align: left;
-      margin-bottom: 10px;
-    }
-
-    .navbar-nav .nav-link {
-      padding-left: 0;
-      padding-right: 0;
-    }
-
-
   }
 
 
+  .header {
+    @media (max-width: 767px) {
 
 
-  @media (max-width: 575px) {
-    padding-top: 60px;
+      &__top {
+        top: -20px;
+        display: flex;
+        flex-direction: row;
+        align-items: flex-start;
+        margin-right: 50px;
+      }
 
-
-    .navbar-collapse {
-      background: map-get($colors, 'white');
-      padding: 10px;
-
+      //.navbar-brand, .navbar-divider, .navbar-link, .header__top {
+      //  display: block;
+      //  text-align: left;
+      //  margin: 0 10px;
+      //}
 
       .navbar-divider {
         font-size: map-get($font-sizes, 'sm');
-        margin-right: 200px;
       }
 
-      .navbar-link {
-        font-size: map-get($font-sizes, 'fs12');
-        margin: 0;
 
+      img {
+        max-height: 70px;
+        max-width: 70px;
+      }
+
+
+      //.header .navbar-collapse {
+      //   margin: 0;
+      //   padding-right: 200px;
+      //   padding-top: 50px;
+      //
+      // }
+
+      .header__top .dot-after::after {
+        content: '';
+      }
+      .header__lang-switcher, .header__address, .header__contact, .header__socials {
+        margin-bottom: 10px;
       }
 
       .navbar-nav {
-        margin-top: 0;
+        width: 100%;
+        padding-left: 10px;
+        padding-right: 10px;
+      }
 
-        .nav-item a {
-          color: map-get($colors, 'dark-gray');
+      .navbar-nav .nav-item {
+        display: block;
+        width: 100%;
+        text-align: left;
+        margin-bottom: 10px;
+      }
+
+      .navbar-nav .nav-link {
+        padding-left: 0;
+        padding-right: 0;
+      }
+
+
+    }
+
+
+    @media (max-width: 576px) {
+      padding-top: 60px;
+
+
+      .navbar-collapse {
+        background: map-get($colors, 'white');
+        padding: 10px;
+
+
+        .navbar-divider {
+          font-size: map-get($font-sizes, 'sm');
+          margin-right: 200px;
         }
+
+        .navbar-link {
+          font-size: map-get($font-sizes, 'fs12');
+
+        }
+
+        .navbar-nav {
+          margin-top: 0;
+
+
+          .nav-item a {
+            color: map-get($colors, 'dark-gray');
+          }
+        }
+
+      }
+
+      &__address, &__socials {
+        display: none !important;
+      }
+
+
+      &__top {
+        top: -60px;
+        left: 0;
+        padding: 10px 15px;
+        background: rgba(255, 255, 255, 0.44);
+        justify-content: space-between !important;
+      }
+
+      .dot-after::after {
+        content: '';
+        display: none;
       }
 
     }
-
-    &__address, &__socials {
-      display: none !important;
-    }
-
-
-    &__top {
-      top: -60px;
-      left: 0;
-      padding: 10px 15px;
-      background: rgba(255, 255, 255, 0.44);
-      justify-content: space-between !important;
-    }
-
-    .dot-after::after {
-      content: '';
-      display: none;
-    }
-
   }
-
-}
 }
 
 
